--- a/src/stylesheet.css
+++ b/src/stylesheet.css
@@ -2,67 +2,18 @@
     font-family: 'メイリオ', 'Hiragino Kaku Gothic ProN', Meiryo, sans-serif;
     font-size: 14px;
 }
-td {
-    white-space: nowrap;
-}
-.error {
-    padding: 0 0.5em;
-    background-color: rgba(255, 0, 0, 0.5);
-}
-table.solid,
-table.solid td {
-    border-width: 1px;
-    border-color: rgb(128, 128, 128);
-    border-collapse: collapse;
-    border-style: solid;
-    padding: 0 0.5em;
-    text-align: center;
-}
-._2m,
-._2m_push,
-._2m_live,
-._2m_work {
-    background-color: rgba(128, 255, 0, 0.125);
-}
-._2p,
-._2p_push,
-._2p_live,
-._2p_work {
-    background-color: rgba(255, 0, 128, 0.125);
-}
-._4m,
-._4m_push,
-._4m_live,
-._4m_work {
-    background-color: rgba(0, 128, 255, 0.125);
-}
-._6m,
-._6m_push,
-._6m_live,
-._6m_work {
-    background-color: rgba(255, 0, 0, 0.125);
-}
-._mm,
-._mm_push,
-._mm_live,
-._mm_work {
-    background-color: rgba(128, 0, 255, 0.125);
-}
-.stripe {
-    background-color: rgba(128, 128, 128, 0.25);
-}
 button {
-    height: 2em;
-    padding: 0 1em;
-    border-width: 1px;
-    border-color: rgb(32, 32, 32);
-    border-style: solid;
-    border-radius: 1em;
-    margin: 4px;
     background: linear-gradient(to right, rgb(255, 255, 255), rgb(224, 224, 224));
+    border-color: rgb(96, 96, 96);
+    border-radius: 1em;
+    border-style: solid;
+    border-width: 1px;
     box-shadow: 0px 0px 0px 2px rgba(160, 160, 160, 0.75);
     color: rgb(32, 32, 32);
     cursor: pointer;
+    height: 2em;
+    margin: 4px;
+    padding: 0 1em;
 }
 button:hover {
     background: linear-gradient(to right, rgb(255, 255, 255), rgb(255, 255, 255));
@@ -72,33 +23,87 @@ button:active {
     background: linear-gradient(to right, rgb(224, 224, 224), rgb(192, 192, 192));
     box-shadow: 0px 0px 0px 2px rgba(128, 128, 128, 0.75);
 }
-button:disabled {
-    border-color: rgb(128, 128, 128);
+.beforePlay {
+    padding: 0;
+    width: 2em;
+}
+.afterPlay {
+    background: linear-gradient(to right, rgb(255, 128, 128), rgb(225, 64, 64));
+    color: rgb(255, 255, 255);
+    padding: 0;
+    width: 2em;
+}
+.afterPlay:hover {
+    background: linear-gradient(to right, rgb(255, 128, 128), rgb(255, 128, 128));
+}
+.afterPlay:active {
+    background: linear-gradient(to right, rgb(224, 96, 96), rgb(192, 32, 32));
+}
+button:disabled,
+.afterPlay:disabled {
     background: linear-gradient(to right, rgb(192, 192, 192), rgb(192, 192, 192));
+    border-color: rgb(128, 128, 128);
     box-shadow: none;
     color: rgb(128, 128, 128);
     cursor: not-allowed;
 }
-.subtractLiveTimes,
-.subtractWorkTimes,
-.subtractTicketLiveTimes,
-.subtractEventTimes {
-    width: 2em;
-    padding: 0;
-    color: rgb(255, 0, 0);
+input[type='checkbox'] {
+    accent-color: rgb(224, 64, 96);
 }
-.addLiveTimes,
-.addWorkTimes,
-.addTicketLiveTimes,
-.addEventTimes {
-    width: 2em;
+input[type='radio'] {
+    accent-color: rgb(224, 192, 128);
+}
+td {
+    white-space: nowrap;
+}
+td a {
+    color: inherit;
+}
+table.solid,
+table.solid td {
+    border-collapse: collapse;
+    border-color: rgb(128, 128, 128);
+    border-style: solid;
+    border-width: 1px;
+    padding: 0 0.5em;
+    text-align: center;
+}
+.goSugoroku {
+    border-radius: 0.5em;
     padding: 0;
-    color: rgb(0, 128, 255);
+    vertical-align: middle;
+    width: 2em;
+}
+.goSugoroku span {
+    font-size: 28px;
+    position: relative;
+    top: -7px;
+}
+._2m {
+    background-color: rgba(128, 255, 0, 0.125);
+}
+._4m {
+    background-color: rgba(0, 128, 255, 0.125);
+}
+._2p {
+    background-color: rgba(255, 0, 128, 0.125);
+}
+._6m {
+    background-color: rgba(255, 0, 0, 0.125);
+}
+._mm {
+    background-color: rgba(128, 0, 255, 0.125);
 }
 .times {
-    min-width: 4em;
     display: inline-block;
     vertical-align: middle;
+}
+.stripe {
+    background-color: rgba(128, 128, 128, 0.25);
+}
+.error {
+    background-color: rgba(255, 0, 0, 0.5);
+    padding: 0 0.5em;
 }
 .info {
     color: rgb(0, 128, 255);
@@ -108,4 +113,22 @@ button:disabled {
 }
 .danger {
     color: rgb(255, 0, 0);
+}
+.vertical {
+    writing-mode: vertical-rl;
+    vertical-align: middle;
+}
+.cgBackground {
+    background-color: rgb(0, 128, 192);
+    color: rgb(255, 255, 255);
+}
+.cgColor {
+    color: rgb(0, 128, 192);
+}
+.mlBackground {
+    background-color: rgb(255, 192, 0);
+    color: rgb(255, 255, 255);
+}
+.mlColor {
+    color: rgb(255, 192, 0);
 }
